ncc/testsuite/negative/macroarg.n
// REFERENCE: macroarg-lib.dll

//using MacroArg; // it is intentionally forgotten to get an error

_ = f (x = 1); //E: named parameters given but formals' names cannot be inferred
